<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimaryDark"
        app:title="实时PDR"
        app:titleTextColor="@android:color/white"
        app:titleTextAppearance="@style/Toolbar.TitleText" />
    <!-- Part 1: 地图容器 -->

    <FrameLayout
        android:id="@+id/mapContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/map_test">

        </ImageView>
        <!-- 这里添加地图控件或者你需要的地图内容 -->

    </FrameLayout>
    <!-- 四个圆形按钮 -->
    <LinearLayout
        android:id="@+id/buttonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignBottom="@id/mapContainer"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_border"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/StartButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_button_background"
            android:contentDescription="@string/Start_btn"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_start_btn" />

        <ImageButton
            android:id="@+id/ResetButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_button_background"
            android:contentDescription="@string/Reset_btn"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_pause_btn" />

        <ImageButton
            android:id="@+id/StopButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_button_background"
            android:contentDescription="@string/Stop_btn"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_stop_btn" />

        <ImageButton
            android:id="@+id/SettingButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:background="@drawable/circle_button_background"
            android:contentDescription="@string/Setting_btn"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_setting_btn" />

    </LinearLayout>

</RelativeLayout>
